After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757632 - Crashes on startup under Wayland
Crashes on startup under Wayland
Status: RESOLVED FIXED
Product: gnote
Classification: Applications
Component: main
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: gnote-maint
gnote-maint
Depends on:
Blocks:
 
 
Reported: 2015-11-05 12:41 UTC by Bastien Nocera
Modified: 2015-11-28 16:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crash when running with X11 support under Wayland (2.33 KB, patch)
2015-11-09 13:50 UTC, Bastien Nocera
none Details | Review

Description Bastien Nocera 2015-11-05 12:41:34 UTC
gnote 3.18.0

Backtrace coming shortly.
Comment 1 Bastien Nocera 2015-11-05 12:44:27 UTC


  • #0 XInternAtom
  • #1 gdk_x11_atom_to_xatom_for_display
    at gdkproperty-x11.c line 115
  • #2 gdk_x11_get_server_time
    at gdkwindow-x11.c line 5501
  • #3 tomboy_window_present_hardcore
  • #4 gnote::Gnote::end_main(bool, bool)
  • #5 gnote::RemoteControlProxy::register_object(Glib::RefPtr<Gio::DBus::Connection> const&, gnote::NoteManager&, sigc::slot<void, bool, bool, sigc::nil, sigc::nil, sigc::nil, sigc::nil, sigc::nil> const&)
  • #6 gnote::Gnote::register_object()
  • #7 gnote::Gnote::on_command_line(Glib::RefPtr<Gio::ApplicationCommandLine> const&)
  • #8 Gio::Application_Class::command_line_callback(_GApplication*, _GApplicationCommandLine*)
  • #9 ffi_call_unix64
  • #10 ffi_call
  • #11 g_cclosure_marshal_generic_va
  • #12 _g_closure_invoke_va
    at gclosure.c line 864
  • #13 g_signal_emit_valist
    at gsignal.c line 3292
  • #14 g_signal_emit
    at gsignal.c line 3439
  • #15 g_application_call_command_line
    at gapplication.c line 953
  • #16 g_application_real_local_command_line
    at gapplication.c line 1007
  • #17 Gio::Application::local_command_line_vfunc(char**&, int&)
  • #18 Gio::Application_Class::local_command_line_vfunc_callback(_GApplication*, char***, int*)
  • #19 g_application_run
    at gapplication.c line 2280
  • #20 gnote::Gnote::main(int, char**)
  • #21 main

Comment 2 Aurimas Černius 2015-11-06 20:28:11 UTC
This is downstream bug. Gnote was built using --with-x11-support configure option. Build it without it and won't crash on Wayland.
Probably makes sense to remove this option entirely.
Comment 3 Bastien Nocera 2015-11-09 13:50:12 UTC
(In reply to Aurimas Černius from comment #2)
> This is downstream bug. Gnote was built using --with-x11-support configure
> option. Build it without it and won't crash on Wayland.
> Probably makes sense to remove this option entirely.

You forget to check the type of the GdkDisplay. That's clearly a programmer's mistake, a bug. Attached patch should fix that.
Comment 4 Bastien Nocera 2015-11-09 13:50:38 UTC
Created attachment 315125 [details] [review]
Fix crash when running with X11 support under Wayland
Comment 5 Aurimas Černius 2015-11-28 16:20:02 UTC
Committed. Thanks.