Fix crash when running with X11 support under Wayland

https://bugzilla.gnome.org/show_bug.cgi?id=757632